[package]
name = "space_shooter"
version = "0.3.1"
edition = "2021"
authors = ["Artur Gwoździowski"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.8"
rand = "0.8.5"
image = "0.24.4"
winit = "0.26.1"

[build-dependencies]
embed-resource = "1.7.3"